--- a/index.html
+++ b/index.html
@@ -52,5 +52,17 @@
              </div>
           </div>
      </article>
+     <article class="cartao">
+        <div class="cartao__conteudo">
+            <h3>Programação</h3>
+            <div class="cartao__conteudo__pergunta">
+                <p>O que é HTML?</p>
+            </div>
+            <div class="cartao__conteudo__resposta">
+                <p>O HTML( limguagem de marcação de hipertexto)</p>
+            </div>
+        </div>
+     </article>
+    </sectio>
 </body>
 </html>
